setting: 데이터베이스 추가 및 해당 DB 설정 반영

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=demo
 server.port = 8081
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/vuetest
+spring.datasource.url=jdbc:postgresql://localhost:5432/vuetest2
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
